syntax = "proto3";

package calendar.v1;
option go_package = "github.com/asynccnu/ccnubox-be/be-api/gen/proto/calendar/v1;calendarv1";

//import "google/protobuf/any.proto";

service CalendarService {
  rpc GetCalendars(GetCalendarsRequest)returns(GetCalendarsResponse);
  rpc SaveCalendar(SaveCalendarRequest)returns(SaveCalendarResponse);
  rpc DelCalendar(DelCalendarRequest)returns(DelCalendarResponse);
}

message Calendar {
  string link =1;
  int64 year =2;
}

message GetCalendarsRequest {}

message GetCalendarsResponse {
  repeated Calendar calendars=1;
}

message SaveCalendarRequest {
  Calendar calendar = 1;
}

message SaveCalendarResponse {}

message DelCalendarRequest {
  int64 year =1;
}

message DelCalendarResponse {}
